--- a/index.html
+++ b/index.html
@@ -30,114 +30,70 @@
             </div>
         </header>
 
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#">Sobre nós</a></li>
-                    <li><a href="#">Tenho interesse</a></li>
-                </ul>
-            </nav>
-            <article>
-                <div class="container">
-                    <h1>Planejamento para criação de sites</h1>
-
-                    <img src="./imagens/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites">
-
-                    <h2>Guia de criação de sites</h2>
-
-                    <p>Você provavelmente está lendo aqui por que está pensando em fazer um novo site, se é a primeira
-                        vez
-                        muitas dúvidas podem surgir, e caso isso aconteça, pode entrar em contato com a gente. Mas antes
-                        pode avaliar cada etapa do nosso passo-a-passo:</p>
-
-                    <p>Construir um site confiável e profissional exige uma série de conhecimentos em algumas áreas como
-                        design, comunicação, marketing, tecnologia, usabilidade, programação. Não precisa ser
-                        especialista
-                        em todas as áreas mas é fundamental ter uma boa noção ou contar com alguém que possa ajudar no
-                        desenvolvimento.</p>
-
-                    <p>Também não existe uma receita para o sucesso, mas um conjunto de boas práticas que quando bem
-                        executadas potencializam as chances de você construir um site poderoso. E no primeiro passo,
-                        neste
-                        post falaremos sobre as etapas básicas do planejamento.</p>
-
-                    <h3>Planejamento</h3>
-
-                    <p>Definição geral e protótipo do site.</p>
-                    <p>É uma etapa bem abrangente pois é nela que deverão ser definidos todos os aspectos do projeto e é
-                        fundamental começar respondendo algumas perguntas como:</p>
-
-                    <h4>1. Quem vai acessar o site? </h4>
-
-                    <p>Qual seria o perfil do público que estaria interessado em acessar o seu site e obter informações
-                        ou
-                        mesmo comprar seus produtos?</p>
-
-                    <p>O principal nesta etapa é conhecer e tentar entender ao máximo os possíveis usuários do seu site,
-                        o
-                        que elas fazem, qual tipo de linguagem seria mais apropriado para falar diretamente com elas?
-                    </p>
-
-                    <p>Essas pessoas visualizariam seu site mais no computador ou no smartphone? Busque informações
-                        precisas
-                        em fontes confiáveis, acesse sites de concorrente diretos e indiretos, avalie desing, interação,
-                        tempo de reposta, linguagem…</p>
-
-                    <h4>2. Qual o tipo de site mais apropriado?</h4>
-                    <p>Se será um site institucional, um blog, um portal, uma loja virtual, entre outros.</p>
-
-                    <p>Você precisa disponibilizar apenas suas informações básicas de contato? Precisa publicar conteúdo
-                        constantemente? Precisa vender pelo site? Precisa conectar pessoas? Disponibilizar algum serviço
-                        online?</p>
-
-                    <h4>3. Quais funcionalidades serão necessárias?</h4>
-                    <p>Seu site precisa de quais recursos para ser relevante para seus usuários?</p>
-
-                    <p>Você precisará, por exemplo, de um mecanismo de busca interna, um formulário de contato, um mapa
-                        interativo, galeria de imagens? O ideal é levantar e classificar as referências.</p>
-
-                    <h4>4. Comece a produção!</h4>
-                    <p>Com as respostas das perguntas acima, certamente a ideia de onde se quer chegar estará mais
-                        clara.
-                        Então você consegue fazer um esboço do seu projeto?</p>
-
-                    <h3>Você pode começar:</h3>
-
-                    <ol>
-                        <li>Desenhando a estrutura do seu site na mão ou em qualquer software de produção gráfica de sua
-                            preferência.</li>
-                        <li>Escrevendo os textos de todas as páginas e seções do site.</li>
-                        <li>Pesquisar ou produzir fotos ou vídeos enriquecer o conteúdo do site.</li>
-                    </ol>
-
-                    <p>Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o
-                        nosso
-                        guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu site.
-                    </p>
-            </article>
-
-    </div>
-    </section>
-    <section id="tenho-interesse">
-        <div class="container">
-            <article>
-                <h1>Ficou interessado?</h1>
-                <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e serviços</p>
-                <div class="cognito">
-                    <script src="https://www.cognitoforms.com/f/seamless.js" data-key="fWNTAmjgPUeMBVM13Sosvg"
-                        data-form="1"></script>
+        <section id="banner">
+            <div class="container">
+                <div class="legenda-container">
+                    <div class="legenda">
+                        <h4>Crie seu site profissional</h4>
+                        <h5>Aqui na PontoCloud você tem a solução completa</h5>
+                    </div>
+                    <a class="button-cta" href="#tenho-interesse">Tenho interesse</a>
                 </div>
-            </article>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p> &copy; PontoCloud. Todos os direitos reservados.
-                <small>Desenvolvido por: Gabriel Campos da Silva</small>
-            </p>
-        </div>
-    </footer>
+            </div>
+        </section>
+
+        <section id="saiba-mais">
+            <div class="container">
+                <h1>Planejamento para criação de sites</h1>
+
+                <img src="./imagens/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites">
+
+                <p>Construir um site confiável e profissional exige uma série de conhecimentos em algumas áreas como
+                    design, comunicação, marketing, tecnologia, usabilidade, programação. Não precisa ser
+                    especialista
+                    em todas as áreas mas é fundamental ter uma boa noção ou contar com alguém que possa ajudar no
+                    desenvolvimento.</p>
+            </div>
+            <a class="button-cta" href="#tenho-interesse">Tenho interesse</a>
+        </section>
+
+        <section>
+            <div class="container">
+                <h1>Dúvidas frequentes</h1>
+
+                <!--Lista definida-->
+                <dl>
+                    <dt>Meu site vai aparecer no google?</dt>
+                    <dd>Sim! Nosso site é otimizado pelo mêcanismo de busca.</dd>
+                    <dt>Quem cria o Layout?</dt>
+                    <dd>A equipe da PontoCloud!</dd>
+                    <dt>Onde o site fica hospedado? É seguro?</dt>
+                    <dd>Fica em nossos servidores, trabalhamos com certificado digital.</dd>
+                </dl>
+                <a class="button-cta faq" href="#tenho-interesse">Tenho interesse</a>
+            </div>
+        </section>
+
+        <section id="tenho-interesse">
+            <div class="container">
+                <article>
+                    <h1>Ficou interessado?</h1>
+                    <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e serviços
+                    </p>
+                    <div class="cognito">
+                        <script src="https://www.cognitoforms.com/f/seamless.js" data-key="fWNTAmjgPUeMBVM13Sosvg"
+                            data-form="1"></script>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <p> &copy; PontoCloud. Todos os direitos reservados.
+                    <small>Desenvolvido por: Gabriel Campos da Silva</small>
+                </p>
+            </div>
+        </footer>
     </div>
 </body>
 
